<resources>
    <string name="app_name">Elon Musk Simulator</string>
    <string name="button_dark_mode">Mode Sombre</string>
    <string name="button_white_mode">Mode claire</string>
    <string name="main_login_text_title">Connectez-vous à votre compte</string>
    <string name="main_login_username_hint">Nom dutilisateur</string>
    <string name="main_login_text_signup">Vous n\'avez pas de compte?</string>
    <string name="main_login_password_hint">Mot de passe</string>
    <string name="button_signup">Enregistrez-vous ici</string>
    <string name="button_login">Connectez-vous ici</string>
    <string name="main_login_incorrect_credentials_text">Votre nom d\'utilisateur ou votre mot de passe est incorrect</string>
    <string name="main_login_account_already_exists">Votre nom d\'utilisateur appartient déjà à un compte</string>
    <string name="menu_about">À propos</string>
    <string name="menu_setting">Paramètres</string>
    <string name="menu_disconnect">Déconnection</string>
    <string name="menu_quit">Fermer</string>
    <string name="setting">Paramètres</string>
    <string name="Musique">Musique</string>
    <string name="BasseQualite">Basse qualité</string>
    <string name="Jeu">Jeu</string>
    <string name="difficulte">Difficulté</string>
    <string name="bouttonFacile">Facile</string>
    <string name="bouttonMedium">Normal</string>
    <string name="bouttonDifficile">Difficile</string>
    <string name="darkMode">Mode sombre</string>
    <string name="langue">Langue</string>
    <string name="Anglais">Anglais</string>
    <string name="francais">Français</string>
    <string name="Politique">Politique de confidentalité</string>
    <string name="Conditions">Conditions dutilisation</string>
    <string name="Credit">Crédits</string>
    <string name="DevMod">Mode développeur</string>
    <string name="DevModeSetting">Paramètres du mode développeur</string>
    <string name="textPolitique">Nous utiliserons vos informations de connection ainsi que tout les données que vous allez rentrer dans cette application a des fin lucratives.\n
        Tout vos erreurs seront comptabilise et si vous faites assez derreur nous nous ferons un plaisir de faire une publication sur nos réseaux sociaux en riant de vous.</string>
    <string name="ConditionsUtilisations">En jouant a ce jeu, vous consenter a nous donner votre ame et toute liberter de vous ridiculisez en publique.</string>
    <string name="employees">Employés</string>
    <string name="employee_text_view">Employé</string>
    <string name="employee_count">Employés</string>
    <string name="employee_button_buy">Acheter</string>
    <string name="button_back">Retour</string>
    <string name="button_info">Info</string>
    <string name="upgrades">Amélioration</string>
    <string name="title_activity_settings">Settings</string>
    <string name="companies">Compagnies</string>
    <string name="employee_popup">Ici, vous pouvez acheter des managers qui vont renvoyer des employés en dessous d\'eux.</string>
    <string name="upgrade_popup">Ici, vous pouvez acheter des améliorations qui permettent d\'augmenter votre revenu.</string>
    <string name="companies_popup">Ici, vous pouvez acheter d\'autres compagnies pour renvoyer plus d\'employés.</string>
    <string name="main_error">Vous n\'avez plus d\'employés à renvoyer. Achetez de nouvelles compagnies pour en renvoyer plus.</string>
    <string name="upgrade_button_info">Description</string>
    <string name="upgrade_button_buy">Acheter\n</string>
    <string name="companies_button_buy">Acheter\n</string>
    <string name="companies_text_employees">Gestionnaires</string>
    <string name="employees_button_buy">Acheter\n</string>
    <string name="main_textview_employees">Employés</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>