<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setting">
        <PreferenceCategory android:title="video">

            <SwitchPreference
                android:defaultValue="false"
                android:key="DarkMode"
                android:title="@string/darkMode" />
            <SwitchPreference
                android:defaultValue="false"
                android:key="switch_preference_1"
                android:title="@string/BasseQualite" />
        </PreferenceCategory>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/DevMod">

        <SwitchPreference
            android:defaultValue="false"
            android:key="ModeDev"
            android:title="@string/DevMod" />
    </PreferenceCategory>
    <PreferenceCategory
        style="@style/TEXT"
        android:title="@string/DevModeSetting"
        app:isPreferenceVisible="false"
        app:key="SettingDev">

        <SwitchPreference
            android:defaultValue="false"
            android:title="Infinite money" />
    </PreferenceCategory>
    <PreferenceCategory app:title="Audio">
        <SwitchPreference
            android:defaultValue="false"
            android:key="Musique"
            android:title="@string/Musique" />
    </PreferenceCategory>

</PreferenceScreen>