<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="504dp">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/Politique"
            style="@style/BUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Politique" />

        <Button
            android:id="@+id/Credit"
            style="@style/BUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Credit" />

        <Button
            android:id="@+id/Conditions"
            style="@style/BUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Conditions" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bouttonAnglais"
                style="@style/BUTTON"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Anglais" />

            <Button
                android:id="@+id/bouttonFrancais"
                style="@style/BUTTON"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/francais" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>