<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/loginLayoutVertical"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginTextTitle"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/main_login_text_title"
            android:textColor="@color/text"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="bottom"
            android:hint="@string/main_login_username_hint"
            android:inputType="textPersonName"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/main_login_password_hint"
            android:inputType="textPassword"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/loginTextSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:text="@string/main_login_text_signup"
            android:textColor="@color/text"
            android:textSize="15sp" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:text="@string/button_signup"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textSize="22sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>