<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/Jeu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Jeu"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/difficulte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficulte"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/bouttongroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/bouttonFacile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/bouttonFacile" />

                <RadioButton
                    android:id="@+id/BouttonMedium"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bouttonMedium" />

                <RadioButton
                    android:id="@+id/bouttondifficile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bouttonDifficile" />

            </RadioGroup>

            <ImageView
                android:id="@+id/imagedifficulte"
                android:layout_width="98dp"
                android:layout_height="98dp"
                app:srcCompat="@drawable/easy" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Audio"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/Musique"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Musique" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Video"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/BasseQualite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BasseQualite" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>