<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/SCREEN"
    android:layout_height="match_parent"
    tools:context=".MainGame">

    <Button
        android:id="@+id/ClickButton"
        style="@style/BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CLicker ici"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/clickAmount"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/ClickButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/buttonEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employees"
        style="@style/BUTTON"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/buttonUpgrade"
        style="@style/BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upgrades"
        app:layout_constraintBottom_toTopOf="@+id/ClickButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEmployee"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/moneyAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0$"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/buttonCompanies"
        style="@style/BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/companies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpgrade"
        app:layout_constraintVertical_bias="0.00999999" />

    <TextView
        android:id="@+id/textViewMainError"
        android:layout_width="181dp"
        android:layout_height="84dp"
        android:text="@string/main_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyAmount"
        app:layout_constraintVertical_bias="0.01999998"
        tools:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>